# taikoi2t

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  specification.md  students.csv
frontend/: .gitignore  ForSelfLog.ps1  ForWebLog.ps1  ImageToLog.ps1  clean-backup.bat  start-for-self-log.bat  start-for-web-log.bat  start-self.bat  students.csv  template-user-setting.bat
sample-scripts/: .gitignore  ImageToLog.ps1  clean-backup.bat  clip.bat  start-web.bat
src/taikoi2t/: __init__.py  app.py  args.py  bounding.py  image.py  main.py  match.py  ocr.py  settings.py  student.py  team.py  types.py  utils.py
src/taikoi2t/application/: args.py  column.py  file.py  match.py  modal.py  student.py  wins.py
src/taikoi2t/implements/: args.py  column.py  file.py  image.py  json.py  match.py  ocr.py  settings.py  student.py  team.py
src/taikoi2t/models/: args.py  column.py  file.py  image.py  match.py  ocr.py  run.py  settings.py  student.py  team.py
taikoi2t/: __init__.py
taikoi2t/application/: match.py  wins.py
taikoi2t/implements/: ocr.py
taikoi2t/models/: json.py  settings.py  team.py
tests/: test_app.py  test_args.py  test_bounding.py  test_column.py  test_file.py  test_image.py  test_json.py  test_main.py  test_match.py  test_ocr.py  test_settings.py  test_student.py  test_team.py
tools/: update_project_version.py  update_usage.py
