[project]
name = "taikoi2t"
version = "0.1.0"
description = ""
authors = [
    {name = "D371 Amamoriya"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr (>=1.7.2,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)"
]

[project.scripts]
main = "taikoi2t.main:run"

[tool.poetry]
packages = [{include = "taikoi2t", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
opencv-stubs = "^0.0.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
