[project]
name = "taikoi2t"
version = "1.4.0"
description = "Extract team information from PvP results screenshots in Blue Archive."
authors = [
    {name = "D371 Amamoriya"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easyocr (>=1.7.2,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
]
[project.scripts]
taikoi2t = "taikoi2t.app:run"

[tool.poetry]
packages = [{include = "taikoi2t", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
opencv-stubs = "^0.0.11"
pre-commit = "^4.2.0"

[[tool.poetry.source]]
name = "torch_source"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "torch_source"}
torchvision = {source = "torch_source"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
